src/tests/snapshots/niri__tests__window_opening__check_target_size@dwU-dhU-b-t.snap
---
source: src/tests/window_opening.rs
description: "config:\nwindow-rule {\n    default-column-width {  }\n    default-window-height {  }\n    border { on; }\n    default-column-display \"tabbed\"\n}\n\nlayout {\n    tab-indicator {\n        place-within-column\n    }\n}"
expression: snapshot
---
initial configure:
size: 0 × 0, bounds: 800 × 600, states: []

post-map configures:
size: 1256 × 696, bounds: 1256 × 696, states: [Activated]
